Removed Sudo from "npm run install-gems"
depending on how your terminal is setup for gems it should be left to the client for transparency.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "install-gems": "sudo gem i sass bourbon",
+    "install-gems": "gem i sass bourbon",
     "install-packages": "npm i && bower i && bourbon i",
     "full-install": "npm run install-gems && npm run install-packages"
   },
